working on responsive

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-	<div class="background-container">
+	<!-- <div class="background-container"> -->
 		<div id="drk-purple"></div>
 		<div id="med-purple"></div>
 		<div id="light-purple"></div>
 		<div id="gray"></div>
-	</div>
+	<!-- </div> -->
 
 	<div id="wrapper">
 		<!-- Navbar -->
@@ -87,8 +87,8 @@
 				<h3 id="subtext">create an account, or contact us.</h3>
 			</div>
 			<a href="#" class="button" id="create-account-btn">CREATE YOUR ACCOUNT</a>
-			<a href="#" class="button" id="contact-btn"><span>CONTACT US</span></a>
-		</div>
+			<a href="#" class="button" id="contact-btn">CONTACT US</a>
+	</div>
 	
 		<!-- Footer -->
 			<footer>
