--- a/index.html
+++ b/index.html
@@ -93,17 +93,10 @@
 		<!-- Footer -->
 			<footer>
 
-				<!-- <div class="contact-icon">
-						<h3><i class="fas fa-phone"></i></h3>
-						<h3> <i class="fas fa-envelope"></i></h3>
-						<h3><i class="fas fa-map-marker"></i></h3>
-						
-				</div> -->
-
 				<div class="col1">
-					<i class="fas fa-phone"></i>&nbsp;&nbsp;&nbsp;<span id="phone"> +1 800 WEBSITE</span><br><br>
-					<i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;<span> hello@mywebnow.com </span><br><br>
-					<i class="fas fa-map-marker"></i>&nbsp;&nbsp;&nbsp;<span> 1 Main St	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Floor 6, <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New York, NY 10005</p></span>
+					<i class="fas fa-phone"></i><span id="phone"> +1 800 WEBSITE</span><br><br>
+					<i class="fas fa-envelope"></i><span>hello@mywebnow.com </span><br><br>
+					<i class="fas fa-map-marker"></i><span><br>1 Main St <br> New York, NY 10005</span>
 				</div>
 
 				<div class="col2">
